<resources>
    <!--ShardePreferences-->
    <string name="name_file_preferences">mx.kodemia.bookdemia.sharedpreferences</string>


    <!--Metodo API-->
    <string name="api_login">login</string>
    <string name="api_register">register</string>
    <string name="key_token">plain-text-token</string>

    <!--String para item de book -->


    <string name="app_name">bookodemia</string>
    <string name="tv_regresar">Regresar</string>
    <string name="tv_experiencia">Estas a unas cuantos pasos de vivir la mejor \n experiencia</string>
    <string name="tv_registra_tu_informacion">Registra tu informacion</string>
    <string name="tiet_usuario">usuario</string>
    <string name="tiet_correo">correo</string>
    <string name="tiet_contrasena">password</string>
    <string name="tiet_password">confirmar password</string>
    <string name="btn_crear_cuenta">CREAR CUENTA</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="api_logout">logout</string>
    <string name="error_internet">"Ups no estas conectado a internet "</string>
    <string name="campo_vacio">campo vacio</string>
    <string name="error_correo">correo no valido</string>
    <string name="error_usuario">usuario no valido</string>
    <string name="tv_titulo">Titulo: %s</string>
    <string name="tv_byautor">Autor: %s</string>
    <string name="api_libros">books</string>
    <string name="regresar">Regresar</string>
    <string name="textview">Book Mockup</string>
    <string name="Autor">By Autor</string>
    <string name="tv_categoria_descripcion">Categoría</string>
    <string name="tv_Descripción_descripcion">Descripción</string>
    <string name="tv_detalles_descripcion">Detalles</string>
    <string name="tv_lorem_descripcion">Lorem ipsum es un texto de marcado de posicion \n comunmente utilizado en las industrias graficas, \n graficas y editoriales para previsualizar diseños y  \n maquetas visuales</string>
    <string name="tv_sobre_autor">Sobre el Autor</string>
    <string name="tv_nombreAutor_descripcion">TextView</string>
</resources>